tests/src/frontend/typechecking/invalid/inherit_params_2.sk
base class A{f: Int}
base class B final {g: Int}
class C extends A, B
